2014-10-06  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/make-syscalls.sh (emit_weak_aliases): Condition
	compat_symbol calls on [SHARED].
	* sysdeps/unix/sysv/linux/powerpc/lchown.S: Remove file.
	* sysdeps/unix/sysv/linux/i386/syscalls.list (oldsetrlimit):
	Remove.
	(setrlimit): Add setrlimit@GLIBC_2.0 alias.
	* sysdeps/unix/sysv/linux/m68k/m680x0/syscalls.list
	(oldsetrlimit): Remove.
	(setrlimit): Add setrlimit@GLIBC_2.0 alias.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/syscalls.list
	(lchown): New syscall entry.
	(oldsetrlimit): Remove.
	(setrlimit): Add setrlimit@GLIBC_2.0 alias.
	* sysdeps/unix/sysv/linux/s390/s390-32/syscalls.list
	(oldsetrlimit): Remove.
	(setrlimit): Add setrlimit@GLIBC_2.0 alias.

	[BZ #14138]
	* sysdeps/unix/sysv/linux/arm/fchown.c: Remove file.
	* sysdeps/unix/sysv/linux/arm/lchown.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/fchown.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/lchown.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/chown.c: Likewise.
	* sysdeps/unix/sysv/linux/arm/syscalls.list (lchown): Add syscall.
	(fchown): Likewise.
	* sysdeps/unix/sysv/linux/m68k/syscalls.list (lchown): Likewise.
	(fchown): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/syscalls.list (chown):
	Likewise.

2014-10-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/lowlevellock.h: Remove file.
	* sysdeps/unix/sysv/linux/powerpc/pthread_spin_unlock.c
	(pthread_spin_unlock): Use __ARCH_REL_INSTR instead of
	__lll_rel_instr and __ARCH_ACQ_INSTR instead of __lll_acq_instr.
	* sysdeps/unix/sysv/linux/powerpc/sem_post.c (__new_sem_post):
	Likewise.
	(__old_sem_post): Likewise.

2014-10-06  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/unix/sysv/linux/tile/sysdep.h (INLINE_VSYSCALL): Define
	INLINE_VSYSCALL, INTERNAL_VSYSCALL, and
	HAVE_CLOCK_GETTIME_VSYSCALL macros.
	* sysdeps/unix/sysv/linux/tile/gettimeofday.c (__gettimeofday):
	Use INLINE_VSYSCALL macro.